# nexus

./: .dockerignore  .gitignore  .gitignore.workspace  AI_USAGE_GUIDE.md  CLEANUP_COMPLETE.md  Cargo.toml  Dockerfile  Dockerfile.adapter  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  stop.sh
agentflow/: Cargo.toml  EXTENDING.md  README.md
agentflow/scripts/test/: run_tests.sh
agentflow/src/: agent.rs  config.rs  lib.rs  llm_provider.rs  orchestrator.rs  workflow.rs
agentflow/tests/: agent_test.rs  orchestrator_test.rs
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  rollout-strategy.yaml  secrets-example.yaml
deploy/monitoring/prometheus/: prometheus.yml
deploy/scripts/: deploy.sh  rollback.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  FRONTEND_API_GUIDE.md  QUICKSTART.md  README.md  TESTS_DESIGN.md
llm-adapter/: Cargo.toml  README.md
llm-adapter/scripts/test/: run_tests.sh
llm-adapter/src/: billing.rs  config.rs  factory.rs  generic.rs  guard.rs  lib.rs  rate_limit.rs  registry.rs  wrapper.rs
llm-adapter/src/providers/: deepseek.rs  doubao.rs  mock.rs  mod.rs  openai.rs  qianwen.rs  zhipu.rs
llm-adapter/tests/: config_test.rs  mock_adapter_test.rs  registry_test.rs
nexus/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml  start.sh
nexus/config/: config.example.json
nexus/config/examples/: adapter_config_example.json  agentflow_config_example.json
nexus/deploy/: .dockerignore  README.md
nexus/deploy/grafana/dashboards/: dashboard.yml
nexus/deploy/k8s/: adapter-sidecar.yaml  redis-deployment.yaml
nexus/deploy/monitoring/prometheus/: service-monitor.yaml
nexus/deploy/monitoring/prometheus/alerts/: prometheus-alerts.yaml
nexus/deploy/scripts/: canary-deploy.sh
nexus/docs/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  DEPLOYMENT.md  DEPLOY_DESIGN.md  ENV.md  FRONTEND_API_GUIDE.md  QUICKSTART.md  README.md  TESTS_DESIGN.md
nexus/scripts/deploy/: prod.sh
nexus/scripts/run/: start.sh
nexus/scripts/test/: run_tests.sh
nexus/scripts/test/lib/: config.sh
nexus/src/: lib.rs  main.rs  state.rs
nexus/src/application/: mod.rs  planner.rs  postprocessor.rs  prompt.rs
nexus/src/application/kb/: client.rs  mod.rs
nexus/src/domain/config/: feature_flag.rs  manager.rs  mod.rs  routing.rs
nexus/src/infrastructure/: mod.rs
nexus/src/infrastructure/cache/: embedding.rs  mod.rs  redis.rs  session.rs
nexus/src/infrastructure/messaging/: mod.rs
nexus/src/infrastructure/messaging/mcp/: bus.rs  message.rs  mod.rs
nexus/src/infrastructure/queue/: manager.rs  mod.rs  task.rs  worker.rs
nexus/src/integration/: llm_adapter_provider.rs  llm_agent.rs  mod.rs
nexus/src/monitor/: audit.rs  error_handler.rs  event.rs  logging.rs  metrics.rs  mod.rs  prometheus.rs
nexus/src/routes/: agents.rs  api_doc.rs  common.rs  health.rs  invoke.rs  mod.rs
nexus/src/routes/config/: adapters.rs  flags.rs  import_export.rs  mod.rs  prompts.rs  reload.rs  routing.rs
nexus/src/routes/handlers/: adapter_helpers.rs  agents.rs  health.rs  invoke.rs  mod.rs
nexus/src/routes/handlers/config/: adapters.rs  common.rs  flags.rs  import_export.rs  mod.rs  prompts.rs  reload.rs  routing.rs
nexus/tests/: README.md  integration_test.rs  performance_test.rs  unit_test.rs
nexus/tests/common/: fixtures.rs  helpers.rs  mocks.rs  mod.rs  utils.rs
nexus/tests/integration/: mod.rs
nexus/tests/integration/api/: health_test.rs  invoke_test.rs  mod.rs
nexus/tests/integration/api/config/: adapters_test.rs  flags_test.rs  mod.rs  routing_test.rs
nexus/tests/integration/end_to_end/: error_handling_test.rs  mod.rs
nexus/tests/performance/: api_performance_test.rs  concurrency_test.rs  mod.rs
nexus/tests/unit/application/: kb_test.rs  mod.rs  postprocessor_test.rs  prompt_test.rs
nexus/tests/unit/domain/config/: feature_flag_test.rs  manager_test.rs  mod.rs  routing_test.rs
nexus/tests/unit/infrastructure/queue/: manager_test.rs  mod.rs
scripts/: run_tests.sh
scripts/run/: stop.sh
scripts/test/: run_tests.sh
src/: lib.rs  state.rs
src/application/: postprocessor.rs  prompt.rs
src/domain/adapters/: factory.rs  generic.rs  mod.rs  registry.rs  wrapper.rs
src/domain/config/: feature_flag.rs  manager.rs  mod.rs  routing.rs
src/infrastructure/: mod.rs
src/infrastructure/adapter/: billing.rs  mod.rs
src/infrastructure/cache/: mod.rs  redis.rs
src/infrastructure/queue/: manager.rs  mod.rs  task.rs  worker.rs
src/monitor/: logging.rs  metrics.rs  mod.rs
src/routes/: common.rs  health.rs  invoke.rs  mod.rs
src/routes/config/: adapters.rs  flags.rs  import_export.rs  mod.rs  prompts.rs  reload.rs  routing.rs
src/routes/handlers/: common.rs  health.rs  invoke.rs  mod.rs
tests/: README.md
tests/common/: utils.rs
tests/integration/services/: mod.rs
tests/performance/: concurrency_test.rs
(+26 files in other folders)
