[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics"] }
prometheus = "0.14"
handlebars = "6.3.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
dashmap = "6.1"
md5 = "0.8.0"
regex = "1.11"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
axum-test = "18.2"
tokio-test = "0.4"
http-body-util = "0.1"


















