[package]
name = "llm-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Nexus Team"]
description = "Unified LLM API adapter framework supporting multiple providers"
license = "MIT"
keywords = ["llm", "adapter", "openai", "api", "ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
md5 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

